--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ android:
 before_install:
   - export JAVA8_HOME=/usr/lib/jvm/java-8-oracle
   - export JAVA_HOME=$JAVA8_HOME
+  - yes | sdkmanager "platforms;android-27"
 
 notifications:
   email: false
