--- a/AndroidBound/build.gradle
+++ b/AndroidBound/build.gradle
@@ -1,8 +1,5 @@
 def artifactName = "androidbound"
 
-ext.bintrayuser = System.getenv("BINTRAY_USER")
-ext.bintraypwd = System.getenv("BINTRAY_PWD")
-
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
@@ -106,8 +103,8 @@ uploadArchives {
 }
 
 bintray {
-    user = bintrayuser
-    key = bintraypwd
+    user = System.getenv("BINTRAY_USER")
+    key = System.getenv("BINTRAY_PWD")
     dryRun = false
 
     publications = ['Publication']
