--- a/androidbound-support/build.gradle
+++ b/androidbound-support/build.gradle
@@ -7,6 +7,7 @@ apply plugin: 'maven'
 apply plugin: 'com.jfrog.bintray'
 apply plugin: 'maven-publish'
 apply plugin: 'com.github.ben-manes.versions'
+apply from: '../jacoco.gradle'
 
 android {
     compileSdkVersion versions.compileSdk
