--- a/AndroidBoundExample/build.gradle
+++ b/AndroidBoundExample/build.gradle
@@ -35,15 +35,19 @@ android {
 }
 
 dependencies {
+    implementation project(':AndroidBound')
+
     annotationProcessor deps.lombok
-    provided deps.lombok
-    compile 'net.danlew:android.joda:2.9.9'
-    compile 'com.github.brianPlummer:tinydancer:0.0.9'
-    compile project(':AndroidBound')
+    compileOnly deps.lombok
 
-    compile deps.aaloger
-    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+    implementation 'net.danlew:android.joda:2.9.9'
+    implementation 'com.github.brianPlummer:tinydancer:0.0.9'
 
-    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5.1'
-    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.1'
+    implementation deps.rx2.android
+    implementation deps.rx2.java
+    implementation deps.aaloger
+    implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.5.4'
+    releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.4'
 }
