--- a/androidbound-support/build.gradle
+++ b/androidbound-support/build.gradle
@@ -49,8 +49,7 @@ android {
 }
 
 dependencies {
-    compile project(':AndroidBound')
-
+    compile "solutions.alterego:androidbound:${maven.artifactVersion}"
     compile deps.support.appcompat
     compile deps.support.recyclerview
 
