--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
             'userOrg': 'alterego-solutions',
             'artifactGroup': 'solutions.alterego',
             'licenses': ["Apache-2.0"],
-            'artifactVersion': '0.9.3',
+            'artifactVersion': '0.9.3-1',
             'artifactDesc': 'This library offers easy view bindings for Android.',
             'artifactVersionCode': 48
     ]
