--- a/build.gradle
+++ b/build.gradle
@@ -7,9 +7,9 @@ buildscript {
             'userOrg': 'alterego-solutions',
             'artifactGroup': 'solutions.alterego',
             'licenses': ["Apache-2.0"],
-            'artifactVersion': '0.9.3-1',
+            'artifactVersion': '0.9.4',
             'artifactDesc': 'This library offers easy view bindings for Android.',
-            'artifactVersionCode': 48
+            'artifactVersionCode': 49
     ]
     ext.versions = [
             'minSdk'        : 14,
